# CPMD

./: CMakeLists.txt  README.md  collect_files.sh
configure/: CRAY-HPE-CCE-AMDEPYC  CRAY-HPE-GFORTRAN-AMDEPYC  CRAY-HPE-INTEL-AMDEPYC  CRAY-HPE-INTEL-SCILIB-AMDEPYC  CRAY-XC30-ARCHER-INTEL  INTEL-AMD-IFORT-OPENMPI  INTEL-KNL-IFORT-OPENMPI  INTEL-XHOST-IFORT-MPI-SCRATCHLIBRARY-VDWLIBRARY  INTEL-XHOST-IFX-MPI  INTEL-XHOST-IFX-MPI-SCRATCHLIBRARY  INTEL-XHOST-IFX-MPI-SCRATCHLIBRARY-VDWLIBRARY  LINUX-AMD64-GFORTRAN-MPI  LINUX-AMD64-GFORTRAN-MPI-FFTW  LINUX-AMD_INTEL-MPI  LINUX-AMD_INTEL-MPI-ONEAPI  LINUX-IA64I_INTEL-MPI-ONEAPI  LINUX-INTEL-INTELMPI
modules/: CMakeLists.txt
modules/MM_Interface/: mm_charge_rest.F  mm_charges.F  mm_elstat.F  mm_excl.F  mm_flex_solv.F  mm_invert.F  mm_multipole.F  mm_nlist.F  mm_pardef.F  mm_quantum_topo.F  mm_solv_constr.F  mm_transl_c0.F  mm_write_potential.F
modules/scratchmodule_lib/: Makefile  SCRATCHLIB_SOURCES  data_managment_utils.F90
modules/vdw_lib/: Makefile  VDWLIB_SOURCES
scratchmodule_lib/: segment_managment_utils.f90
scripts/: configure.sh  getversion.sh
scripts/templates/: max.rules.sh  max.template  min.rules.sh  min.template  sum_in_place.template  sum_root_in_place.template
src/: CMakeLists.txt  adapttol_utils.mod.F90  atomwf_utils.mod.F90  atrho_utils.mod.F90  atwf.mod.F90  azzero_utils.mod.F90  bessm_utils.mod.F90  beta_utils.mod.F90  bicanonicalCalculation.mod.F90  blas_tuned_ES.F90  c_mem_utils.c  cdft_utils.mod.F90  cofor_utils.mod.F90  compress.F90  conduct_utils.mod.F90  control_bcast_utils.mod.F90  control_def_utils.mod.F90  control_pri_utils.mod.F90  control_utils.mod.F90  core_spect_utils.mod.F90  cplngs_utils.mod.F90  cpmd_global.h  cppt.mod.F90  csize_utils.mod.F90  csmat_utils.mod.F90  cuda_utils.mod.F90  cusolver_utils.mod.F90  ddipo_utils.mod.F90  debfor_utils.mod.F90  detsp_utils.mod.F90  dftd3_core.mod.F90  dftd3_driver.mod.F90  dftin_utils.mod.F90  dist_prowfn_utils.mod.F90  dotp_utils.mod.F90  drhov_utils.mod.F90  dylmr_utils.mod.F90  egointer_utils.mod.F90  eicalc_utils.mod.F90  epr_dv0_utils.mod.F90  (+183 more)
